security/network-policies/apigw-allow-user-order.yaml
# security/network-policies/apigw-allow-user-order.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: apigw-to-services
  namespace: sentinelsecurity
spec:
  podSelector:
    matchLabels:
      app: api-gateway
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: user-service
        - podSelector:
            matchLabels:
              app: order-service
      ports:
        - protocol: TCP
          port: 8000
  # WHY: API Gateway can only call User & Order on port 8000
