security/network-policies/frontend-allow-apigw.yaml
# security/network-policies/frontend-allow-apigw.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-to-apigateway
  namespace: sentinelsecurity
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 8080
  # WHY: frontend can only reach api-gateway:8080
